# tapusAI

./: CLAUDE.md  Context.md  README.md  package-lock.json  package.json  tsconfig.base.json
backend/: .env.example  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  deps.py
backend/app/core/: __init__.py  config.py  deps.py  security.py
backend/app/domain/: exceptions.py
backend/app/domain/entities/: __init__.py  enums.py  guest.py  guest_interest.py  menu_category.py  menu_item.py  notification.py  table.py  user.py  waitlist_entry.py
backend/app/domain/interfaces/: __init__.py  guest_repository.py  waitlist_repository.py
backend/app/domain/services/: __init__.py  waitlist_service.py
backend/app/infrastructure/database/: __init__.py  session.py
backend/app/infrastructure/repositories/: __init__.py  guest_interest_repository.py  guest_repository.py  menu_repository.py  user_repository.py  waitlist_repository.py
backend/app/infrastructure/sms/: __init__.py  base.py  mock_adapter.py  twilio_adapter.py
backend/app/services/: __init__.py  notification_service.py
backend/app/tasks/: __init__.py  reminder_task.py
backend/tests/: __init__.py  conftest.py  test_health.py
backend/tests/api/: test_waitlist_api.py
backend/tests/unit/: test_auth_endpoints.py  test_entities.py  test_guest_token.py  test_menu_entities.py  test_notification_service.py  test_reminder_task.py  test_security.py  test_waitlist_service.py
(+135 files in other folders)
